sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:13: error: Unmatched closing brace '}' ignored here
}
^