sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var pos : Int = 1
  while (pos != getNombreValeurs()){
      if (plusPetit(pos+1,pos)) {echange(pos+1,pos); pos=pos-1
                                if (pos<0) {pos=0}}
      else {pos = pos +1}
    }
  }
}